Error en la conexion backend

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,35 +1,5 @@
-<div class="login">
-    <div class="p-fluid">
-        <p-toast position="top-center"></p-toast>
-        <div class="p-grid">
-            <div class="p-col-2 p-offset-5">
-                <div class="p-field">
-                    <span class="p-float-label">
-                        <input type="text" id="inputtext" pInputText />
-                        <label for="inputtext"></label>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="p-grid">
-            <div class="p-col-2 p-offset-5">
-                <div class="p-field">
-                    <span class="p-float-label">
-                        <p-password>
-                        </p-password>
-                        <label for="userpassword"></label>
-                    </span>
-                </div>
-            </div>
-        </div>
-
-        <div class="p-grid p-justify-center">
-            <div class="p-col-2">
-                <div class="p-field">
-                    <button pButton pRipple type="button" label="Entrar" class="p-button-primary" icon="pi star-o"
-                        iconPos="right" (click)="login();"></button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<ul>
+    <li>
+      hola
+    </li>
+</ul>
